@@ -7,7 +7,7 @@
     <groupId>org.zenoss.zep</groupId>
     <artifactId>zep-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.8.0</version>
+    <version>2.8.1</version>
     <name>Zenoss Event Processor Parent</name>
     <url>http://www.zenoss.com</url>
 
@@ -21,10 +21,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <java.version>21</java.version>
+
         <!-- This database is used for integration tests (dropped/added each time). -->
         <zep.test.jdbc.dbname>zenoss_zep_test</zep.test.jdbc.dbname>
+        <zep.test.jdbc.hostname>mysql</zep.test.jdbc.hostname>
         <zep.test.index.dir>${project.build.directory}/index</zep.test.index.dir>
-        <zep.test.amqp.uri>amqp://zenoss:zenoss@localhost:5672/zenoss-test</zep.test.amqp.uri>
+        <zep.test.amqp.uri>amqp://zenoss:zenoss@rabbitmq:5672/zenoss-test</zep.test.amqp.uri>
 
         <!--
         Changing the Lucene version here could negatively affect customers using 4.x -> 5.x migrations.
@@ -38,29 +41,61 @@
         -->
         <version.solrj>4.7.2</version.solrj>
 
-        <version.jackson>1.9.2</version.jackson>
-        <version.jetty>7.5.3.v20111011</version.jetty>
-        <version.logback>0.9.26</version.logback>
-        <version.metrics>4.1.2</version.metrics>
-        <version.mysql>5.1.15</version.mysql>
-        <version.postgresql>9.0-801.jdbc4</version.postgresql>
-        <version.resteasy>2.0.1.GA</version.resteasy>
-        <version.slf4j>1.7.5</version.slf4j>
-        <version.spring>3.0.5.RELEASE</version.spring>
-        <version.tomcat-jdbc>7.0.27</version.tomcat-jdbc>
-        <guava.version>31.1-jre</guava.version>
+        <spring.version>6.1.2</spring.version>
+        <jackson.version>2.16.1</jackson.version>
+        <jetty.version>11.0.19</jetty.version>
 
-        <metric-consumer.version>0.1.14</metric-consumer.version>
+        <metrics.version>4.2.23</metrics.version>
+        <jedis.version>3.7.1</jedis.version>
+        <spring-data-redis.version>3.2.1</spring-data-redis.version>
+        <mysql.version>5.1.15</mysql.version>
+        <mariadb-java-client.version>1.1.7</mariadb-java-client.version>
+        <postgresql.version>9.0-801.jdbc4</postgresql.version>
+        <cglib-nodep.version>2.2</cglib-nodep.version>
+        <jython-standalone.version>2.7.3</jython-standalone.version>
+        <java-uuid-generator.version>4.3.0</java-uuid-generator.version>
+        <resteasy.version>6.2.6.Final</resteasy.version>
+        <resteasy-spring.version>3.1.0.Final</resteasy-spring.version>
+        <httpcomponents.version>4.5.13</httpcomponents.version>
+        <janino.version>3.1.11</janino.version>
+        <jetty-jakarta-servlet-api.version>5.0.2</jetty-jakarta-servlet-api.version>
+        <metrics-core.version>4.2.23</metrics-core.version>
+        <slf4j.version>2.0.10</slf4j.version>
+        <logback.version>1.4.14</logback.version>
+        <tomcat-jdbc.version>7.0.27</tomcat-jdbc.version>
+        <guava.version>33.0.0-jre</guava.version>
+        <easymock.version>5.2.0</easymock.version>
+        <junit.version>4.13.2</junit.version>
+
+        <metric-consumer.version>0.1.19</metric-consumer.version>
 
         <!-- chosen based upon the version used in zing-proto -->
-        <protobuf.version>3.21.7</protobuf.version>
+<!--        <protobuf-java.version>2.5.0</protobuf-java.version>-->
+        <protobuf-java.version>3.24.2</protobuf-java.version>
 
+        <google-http-client.version>1.19.0</google-http-client.version>
         <gax-grpc.version>2.24.0</gax-grpc.version>
         <pubsub.version>1.115.2</pubsub.version>
         <pubsublite.version>1.12.3</pubsublite.version>
-        <zenoss-protocols.version>2.1.4</zenoss-protocols.version>
-        <zenoss-utils.version>2.1.0</zenoss-utils.version>
+        <zenoss-protocols.version>2.1.9</zenoss-protocols.version>
+        <zenoss-utils.version>2.1.1</zenoss-utils.version>
         <zing-proto.version>11.1.2</zing-proto.version>
+
+        <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
+        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
+        <keytool-maven-plugin.version>1.7</keytool-maven-plugin.version>
+        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
+        <exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
+        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.2.3</maven-failsafe-plugin.version>
+        <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
+        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+        <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
+        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+        <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
     </properties>
 
     <profiles>
@@ -86,10 +121,10 @@
             </activation>
             <properties>
                 <zep.jdbc.protocol>${dbtype}</zep.jdbc.protocol>
-                <zep.jdbc.hostname>localhost</zep.jdbc.hostname>
+                <zep.jdbc.hostname>${zep.test.jdbc.hostname}</zep.jdbc.hostname>
                 <zep.jdbc.port>3306</zep.jdbc.port>
                 <zep.jdbc.admin.username>root</zep.jdbc.admin.username>
-                <zep.jdbc.admin.password></zep.jdbc.admin.password>
+                <zep.jdbc.admin.password>root</zep.jdbc.admin.password>
                 <zep.jdbc.username>zenoss</zep.jdbc.username>
                 <zep.jdbc.password>zenoss</zep.jdbc.password>
             </properties>
@@ -104,7 +139,7 @@
             </activation>
             <properties>
                 <zep.jdbc.protocol>${dbtype}</zep.jdbc.protocol>
-                <zep.jdbc.hostname>localhost</zep.jdbc.hostname>
+                <zep.jdbc.hostname>127.0.0.1</zep.jdbc.hostname>
                 <zep.jdbc.port>5432</zep.jdbc.port>
                 <zep.jdbc.admin.username>postgres</zep.jdbc.admin.username>
                 <zep.jdbc.admin.password>postgres</zep.jdbc.admin.password>
@@ -118,14 +153,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>${junit.version}</version>
             <type>jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.0</version>
+            <version>${easymock.version}</version>
             <type>jar</type>
             <scope>test</scope>
         </dependency>
@@ -137,7 +172,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>${findbugs-maven-plugin.version}</version>
                     <configuration>
                         <xmlOutput>true</xmlOutput>
                     </configuration>
@@ -145,7 +180,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.7</version>
+                    <version>${maven-antrun-plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -153,10 +188,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 <compilerArgs>
                   <arg>-Xlint:all</arg>
                 </compilerArgs>
@@ -164,8 +199,16 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${maven-war-plugin.version}</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
+                <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
                     <detectJavaApiLink>true</detectJavaApiLink>
                     <excludePackageNames>*.impl.*,*.rest.*</excludePackageNames>
@@ -174,17 +217,20 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>${versions-maven-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>${maven-source-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
